--- a/docs/examples/language_model.ipynb
+++ b/docs/examples/language_model.ipynb
@@ -102,9 +102,9 @@
    "outputs": [],
    "source": [
     "dataset_name = 'wikitext-2'\n",
-    "train_dataset, val_dataset, test_dataset = [nlp.datasets.WikiText2(segment=segment,\n",
-    "                                                                   bos=None, eos='<eos>',\n",
-    "                                                                   skip_empty=False)\n",
+    "train_dataset, val_dataset, test_dataset = [nlp.data.WikiText2(segment=segment,\n",
+    "                                                               bos=None, eos='<eos>',\n",
+    "                                                               skip_empty=False)\n",
     "                                            for segment in ['train', 'val', 'test']]\n",
     "\n",
     "vocab = nlp.Vocab(nlp.data.Counter(train_dataset[0]), padding_token=None, bos_token=None)\n",
@@ -147,7 +147,7 @@
    ],
    "source": [
     "model_name = 'standard_lstm_lm_200'\n",
-    "model, vocab = nlp.models.get_model(model_name, vocab=vocab, dataset_name=None)\n",
+    "model, vocab = nlp.model.get_model(model_name, vocab=vocab, dataset_name=None)\n",
     "print(model)\n",
     "print(vocab)"
    ]
@@ -319,37 +319,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0 Batch 100/746] loss 8.05, ppl 3129.00, throughput 1706.34 samples/s\n",
-      "[Epoch 0 Batch 200/746] loss 7.24, ppl 1399.34, throughput 1950.63 samples/s\n",
-      "[Epoch 0 Batch 300/746] loss 6.96, ppl 1053.46, throughput 1843.63 samples/s\n",
-      "[Epoch 0 Batch 400/746] loss 6.70, ppl 813.17, throughput 1891.41 samples/s\n",
-      "[Epoch 0 Batch 500/746] loss 6.50, ppl 667.19, throughput 2000.01 samples/s\n",
-      "[Epoch 0 Batch 600/746] loss 6.33, ppl 563.24, throughput 1886.87 samples/s\n",
-      "[Epoch 0 Batch 700/746] loss 6.22, ppl 501.24, throughput 1923.99 samples/s\n",
-      "[Epoch 0] throughput 1868.94 samples/s\n",
-      "[Epoch 0] time cost 35.11s, valid loss 5.90, valid ppl 366.51\n",
+      "[Epoch 0 Batch 100/746] loss 8.05, ppl 3129.00, throughput 1395.06 samples/s\n",
+      "[Epoch 0 Batch 200/746] loss 7.24, ppl 1399.34, throughput 1895.63 samples/s\n",
+      "[Epoch 0 Batch 300/746] loss 6.96, ppl 1053.46, throughput 1996.78 samples/s\n",
+      "[Epoch 0 Batch 400/746] loss 6.70, ppl 813.17, throughput 1890.44 samples/s\n",
+      "[Epoch 0 Batch 500/746] loss 6.50, ppl 667.19, throughput 1883.28 samples/s\n",
+      "[Epoch 0 Batch 600/746] loss 6.33, ppl 563.24, throughput 1975.94 samples/s\n",
+      "[Epoch 0 Batch 700/746] loss 6.22, ppl 501.24, throughput 1930.41 samples/s\n",
+      "[Epoch 0] throughput 1820.23 samples/s\n",
+      "[Epoch 0] time cost 36.12s, valid loss 5.90, valid ppl 366.51\n",
       "test loss 5.82, test ppl 337.05\n",
-      "[Epoch 1 Batch 100/746] loss 6.10, ppl 446.92, throughput 1905.06 samples/s\n",
-      "[Epoch 1 Batch 200/746] loss 6.00, ppl 404.51, throughput 1837.74 samples/s\n",
-      "[Epoch 1 Batch 300/746] loss 5.94, ppl 380.40, throughput 1911.86 samples/s\n",
-      "[Epoch 1 Batch 400/746] loss 5.89, ppl 362.86, throughput 1905.97 samples/s\n",
-      "[Epoch 1 Batch 500/746] loss 5.79, ppl 325.73, throughput 1917.21 samples/s\n",
-      "[Epoch 1 Batch 600/746] loss 5.70, ppl 298.65, throughput 1898.85 samples/s\n",
-      "[Epoch 1 Batch 700/746] loss 5.64, ppl 282.85, throughput 2002.86 samples/s\n",
-      "[Epoch 1] throughput 1908.14 samples/s\n",
-      "[Epoch 1] time cost 34.59s, valid loss 5.53, valid ppl 251.99\n",
+      "[Epoch 1 Batch 100/746] loss 6.10, ppl 446.92, throughput 1932.23 samples/s\n",
+      "[Epoch 1 Batch 200/746] loss 6.00, ppl 404.51, throughput 1877.29 samples/s\n",
+      "[Epoch 1 Batch 300/746] loss 5.94, ppl 380.40, throughput 1902.84 samples/s\n",
+      "[Epoch 1 Batch 400/746] loss 5.89, ppl 362.86, throughput 1944.96 samples/s\n",
+      "[Epoch 1 Batch 500/746] loss 5.79, ppl 325.73, throughput 1867.69 samples/s\n",
+      "[Epoch 1 Batch 600/746] loss 5.70, ppl 298.65, throughput 1983.97 samples/s\n",
+      "[Epoch 1 Batch 700/746] loss 5.64, ppl 282.85, throughput 1892.81 samples/s\n",
+      "[Epoch 1] throughput 1915.09 samples/s\n",
+      "[Epoch 1] time cost 34.65s, valid loss 5.53, valid ppl 251.99\n",
       "test loss 5.44, test ppl 229.78\n",
-      "[Epoch 2 Batch 100/746] loss 5.63, ppl 278.83, throughput 1950.40 samples/s\n",
-      "[Epoch 2 Batch 200/746] loss 5.56, ppl 259.11, throughput 1871.86 samples/s\n",
-      "[Epoch 2 Batch 300/746] loss 5.52, ppl 249.74, throughput 1976.07 samples/s\n",
-      "[Epoch 2 Batch 400/746] loss 5.52, ppl 249.21, throughput 1848.24 samples/s\n",
-      "[Epoch 2 Batch 500/746] loss 5.42, ppl 226.61, throughput 1913.61 samples/s\n",
-      "[Epoch 2 Batch 600/746] loss 5.36, ppl 212.60, throughput 1963.72 samples/s\n",
-      "[Epoch 2 Batch 700/746] loss 5.33, ppl 206.46, throughput 1904.15 samples/s\n",
-      "[Epoch 2] throughput 1921.21 samples/s\n",
-      "[Epoch 2] time cost 34.62s, valid loss 5.26, valid ppl 192.69\n",
+      "[Epoch 2 Batch 100/746] loss 5.63, ppl 278.83, throughput 1880.85 samples/s\n",
+      "[Epoch 2 Batch 200/746] loss 5.56, ppl 259.11, throughput 1933.27 samples/s\n",
+      "[Epoch 2 Batch 300/746] loss 5.52, ppl 249.74, throughput 1858.71 samples/s\n",
+      "[Epoch 2 Batch 400/746] loss 5.52, ppl 249.21, throughput 1896.20 samples/s\n",
+      "[Epoch 2 Batch 500/746] loss 5.42, ppl 226.61, throughput 1965.41 samples/s\n",
+      "[Epoch 2 Batch 600/746] loss 5.36, ppl 212.60, throughput 1874.85 samples/s\n",
+      "[Epoch 2 Batch 700/746] loss 5.33, ppl 206.46, throughput 1890.60 samples/s\n",
+      "[Epoch 2] throughput 1907.40 samples/s\n",
+      "[Epoch 2] time cost 34.70s, valid loss 5.26, valid ppl 192.69\n",
       "test loss 5.18, test ppl 177.32\n",
-      "Total training throughput 1542.14 samples/s\n"
+      "Total training throughput 1534.74 samples/s\n"
      ]
     }
    ],
@@ -375,13 +375,13 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 4982k  100 4982k    0     0  8553k      0 --:--:-- --:--:-- --:--:-- 8545k\n",
+      "100 4982k  100 4982k    0     0  6107k      0 --:--:-- --:--:-- --:--:-- 6105k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  390k  100  390k    0     0  1403k      0 --:--:-- --:--:-- --:--:-- 1404k\n",
+      "100  390k  100  390k    0     0  1052k      0 --:--:-- --:--:-- --:--:-- 1055k\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  439k  100  439k    0     0  1667k      0 --:--:-- --:--:-- --:--:-- 1670k\n",
+      "100  439k  100  439k    0     0  1195k      0 --:--:-- --:--:-- --:--:-- 1194k\n",
       "['ptb.test.txt', 'ptb.train.txt', 'ptb.valid.txt']\n"
      ]
     }
@@ -435,16 +435,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Epoch 0] throughput 1683.70 samples/s\n",
-      "[Epoch 0] time cost 2.43s, valid loss 5.32, valid ppl 205.25\n",
+      "[Epoch 0] throughput 1714.99 samples/s\n",
+      "[Epoch 0] time cost 2.41s, valid loss 5.32, valid ppl 205.25\n",
       "test loss 5.32, test ppl 205.25\n",
-      "[Epoch 1] throughput 2028.28 samples/s\n",
-      "[Epoch 1] time cost 2.45s, valid loss 5.04, valid ppl 154.75\n",
+      "[Epoch 1] throughput 1682.03 samples/s\n",
+      "[Epoch 1] time cost 2.41s, valid loss 5.04, valid ppl 154.75\n",
       "test loss 5.04, test ppl 154.75\n",
-      "[Epoch 2] throughput 1857.36 samples/s\n",
-      "[Epoch 2] time cost 2.49s, valid loss 4.96, valid ppl 143.20\n",
+      "[Epoch 2] throughput 1979.00 samples/s\n",
+      "[Epoch 2] time cost 2.42s, valid loss 4.96, valid ppl 143.20\n",
       "test loss 4.96, test ppl 143.20\n",
-      "Total training throughput 607.93 samples/s\n"
+      "Total training throughput 620.79 samples/s\n"
      ]
     }
    ],
