--- a/docs/examples/sentiment_analysis.ipynb
+++ b/docs/examples/sentiment_analysis.ipynb
@@ -43,7 +43,7 @@
     "from mxnet import nd, gluon, autograd\n",
     "\n",
     "import gluonnlp as nlp\n",
-    "from gluonnlp import datasets, Vocab"
+    "from gluonnlp import data, Vocab"
    ]
   },
   {
@@ -59,16 +59,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dropout = 0.5\n",
+    "dropout = 0\n",
     "language_model_name = 'standard_lstm_lm_200'\n",
     "pretrained = True\n",
-    "num_gpus = 4\n",
-    "learning_rate = 0.01 * num_gpus\n",
-    "batch_size = 20 * num_gpus\n",
+    "num_gpus = 1\n",
+    "learning_rate = 0.005 * num_gpus\n",
+    "batch_size = 16 * num_gpus\n",
     "bucket_num = 10\n",
     "bucket_ratio = 0.5\n",
-    "epochs = 15\n",
-    "grad_clip = 0.25\n",
+    "epochs = 1\n",
+    "grad_clip = 2\n",
     "log_interval = 100"
    ]
   },
@@ -107,15 +107,14 @@
      "output_type": "stream",
      "text": [
       "SentimentNet(\n",
-      "  (encoder): LSTM(200 -> 800, TNC, num_layers=2, dropout=0.5)\n",
       "  (out_layer): HybridSequential(\n",
-      "    (0): Dropout(p = 0.5, axes=())\n",
+      "    (0): Dropout(p = 0, axes=())\n",
       "    (1): Dense(None -> 1, linear)\n",
       "  )\n",
       "  (embedding): HybridSequential(\n",
-      "    (0): Embedding(33279 -> 200, float32)\n",
-      "    (1): Dropout(p = 0.5, axes=())\n",
+      "    (0): Embedding(33278 -> 200, float32)\n",
       "  )\n",
+      "  (encoder): LSTM(200 -> 800, TNC, num_layers=2)\n",
       ")\n"
      ]
     },
@@ -166,11 +165,11 @@
     "        out = self.out_layer(agg_state)\n",
     "        return out\n",
     "\n",
-    "lm_model, vocab = nlp.models.get_model(name=language_model_name,\n",
-    "                                       pretrained=pretrained,\n",
-    "                                       ctx=context,\n",
-    "                                       dropout=dropout,\n",
-    "                                       prefix='sent_net_')\n",
+    "lm_model, vocab = nlp.model.get_model(name=language_model_name,\n",
+    "                                      pretrained=pretrained,\n",
+    "                                      ctx=context,\n",
+    "                                      dropout=dropout,\n",
+    "                                      prefix='sent_net_')\n",
     "net = SentimentNet(embedding_block=lm_model.embedding, encoder_block=lm_model.encoder,\n",
     "                   dropout=dropout, prefix='sent_net_')\n",
     "net.initialize(mx.init.Xavier(), ctx=context)\n",
@@ -202,13 +201,13 @@
      "output_type": "stream",
      "text": [
       "Tokenize using spaCy...\n",
-      "Done! Tokenizing Time=6.03s, #Sentences=25000\n",
-      "Done! Tokenizing Time=7.48s, #Sentences=25000\n"
+      "Done! Tokenizing Time=5.26s, #Sentences=25000\n",
+      "Done! Tokenizing Time=4.97s, #Sentences=25000\n"
      ]
     }
    ],
    "source": [
-    "train_dataset, test_dataset = [datasets.IMDB(root='data/imdb', segment=segment) for segment in ('train', 'test')]\n",
+    "train_dataset, test_dataset = [data.IMDB(root='data/imdb', segment=segment) for segment in ('train', 'test')]\n",
     "print(\"Tokenize using spaCy...\")\n",
     "tokenizer = nlp.data.SpacyTokenizer('en')\n",
     "length_clip = nlp.data.ClipSequence(500)\n",
@@ -289,14 +288,13 @@
    "outputs": [],
    "source": [
     "def train(net, context, epochs):\n",
-    "    trainer = gluon.Trainer(net.collect_params(), 'adagrad', {'learning_rate': learning_rate,\n",
-    "                                                              'wd': 0.001})\n",
+    "    trainer = gluon.Trainer(net.collect_params(), 'ftml', {'learning_rate': learning_rate})\n",
     "    loss = gluon.loss.SigmoidBCELoss()\n",
     "\n",
     "    # Construct the DataLoader\n",
-    "    batchify_fn = nlp.data.batchify.Wrap(nlp.data.batchify.Pad(axis=0), \n",
-    "                                         nlp.data.batchify.Stack(),\n",
-    "                                         nlp.data.batchify.Stack())  # Pad data, stack label and lengths\n",
+    "    batchify_fn = nlp.data.batchify.Tuple(nlp.data.batchify.Pad(axis=0), \n",
+    "                                          nlp.data.batchify.Stack(),\n",
+    "                                          nlp.data.batchify.Stack()) # Pad data, stack label and lengths\n",
     "    batch_sampler = nlp.data.sampler.FixedBucketSampler(train_data_lengths,\n",
     "                                                        batch_size=batch_size,\n",
     "                                                        num_buckets=bucket_num,\n",
@@ -383,115 +381,40 @@
      "output_type": "stream",
      "text": [
       "FixedBucketSampler:\n",
-      "  sample_num=25000, batch_num=265\n",
+      "  sample_num=25000, batch_num=1319\n",
       "  key=[14, 68, 122, 176, 230, 284, 338, 392, 446, 500]\n",
       "  cnt=[5, 976, 2353, 6662, 4470, 2661, 1836, 1385, 1012, 3640]\n",
-      "  batch_size=[1428, 294, 163, 113, 86, 80, 80, 80, 80, 80]\n",
-      "[Epoch 0 Batch 100/265] elapsed 20.86 s, avg loss 0.009846, throughput 109.40K wps\n",
-      "[Epoch 0 Batch 200/265] elapsed 19.95 s, avg loss 0.007972, throughput 124.55K wps\n",
+      "  batch_size=[285, 58, 32, 22, 17, 16, 16, 16, 16, 16]\n",
+      "[Epoch 0 Batch 100/1319] elapsed 9.39 s, avg loss 0.002415, throughput 50.44K wps\n",
+      "[Epoch 0 Batch 200/1319] elapsed 8.70 s, avg loss 0.002434, throughput 52.44K wps\n",
+      "[Epoch 0 Batch 300/1319] elapsed 8.00 s, avg loss 0.002218, throughput 61.50K wps\n",
+      "[Epoch 0 Batch 400/1319] elapsed 8.24 s, avg loss 0.002379, throughput 56.03K wps\n",
+      "[Epoch 0 Batch 500/1319] elapsed 7.40 s, avg loss 0.002367, throughput 61.94K wps\n",
+      "[Epoch 0 Batch 600/1319] elapsed 8.13 s, avg loss 0.002169, throughput 59.47K wps\n",
+      "[Epoch 0 Batch 700/1319] elapsed 8.25 s, avg loss 0.002181, throughput 58.41K wps\n",
+      "[Epoch 0 Batch 800/1319] elapsed 8.37 s, avg loss 0.001969, throughput 58.19K wps\n",
+      "[Epoch 0 Batch 900/1319] elapsed 8.83 s, avg loss 0.002150, throughput 50.71K wps\n",
+      "[Epoch 0 Batch 1000/1319] elapsed 8.08 s, avg loss 0.001967, throughput 58.79K wps\n",
+      "[Epoch 0 Batch 1100/1319] elapsed 7.90 s, avg loss 0.001866, throughput 58.90K wps\n",
+      "[Epoch 0 Batch 1200/1319] elapsed 7.60 s, avg loss 0.001938, throughput 58.56K wps\n",
+      "[Epoch 0 Batch 1300/1319] elapsed 7.71 s, avg loss 0.001821, throughput 57.63K wps\n",
       "Begin Testing...\n",
-      "[Batch 100/313] elapsed 12.09 s\n",
-      "[Batch 200/313] elapsed 9.88 s\n",
-      "[Batch 300/313] elapsed 10.35 s\n",
-      "[Epoch 0] train avg loss 0.008628, test acc 0.71, test avg loss 0.534941, throughput 115.87K wps\n",
-      "[Epoch 1 Batch 100/265] elapsed 18.95 s, avg loss 0.005504, throughput 158.88K wps\n",
-      "[Epoch 1 Batch 200/265] elapsed 18.32 s, avg loss 0.008851, throughput 102.06K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 12.08 s\n",
-      "[Batch 200/313] elapsed 11.75 s\n",
-      "[Batch 300/313] elapsed 11.34 s\n",
-      "[Epoch 1] train avg loss 0.007137, test acc 0.75, test avg loss 0.480933, throughput 126.94K wps\n",
-      "[Epoch 2 Batch 100/265] elapsed 18.35 s, avg loss 0.007726, throughput 107.42K wps\n",
-      "[Epoch 2 Batch 200/265] elapsed 20.12 s, avg loss 0.004616, throughput 153.73K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 12.59 s\n",
-      "[Batch 200/313] elapsed 10.75 s\n",
-      "[Batch 300/313] elapsed 11.51 s\n",
-      "[Epoch 2] train avg loss 0.006288, test acc 0.81, test avg loss 0.422101, throughput 117.66K wps\n",
-      "[Epoch 3 Batch 100/265] elapsed 20.22 s, avg loss 0.004104, throughput 159.45K wps\n",
-      "[Epoch 3 Batch 200/265] elapsed 18.90 s, avg loss 0.006678, throughput 98.29K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 11.79 s\n",
-      "[Batch 200/313] elapsed 12.56 s\n",
-      "[Batch 300/313] elapsed 10.64 s\n",
-      "[Epoch 3] train avg loss 0.005662, test acc 0.80, test avg loss 0.418549, throughput 123.45K wps\n",
-      "[Epoch 4 Batch 100/265] elapsed 18.10 s, avg loss 0.007802, throughput 102.02K wps\n",
-      "[Epoch 4 Batch 200/265] elapsed 18.76 s, avg loss 0.005220, throughput 114.04K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 12.21 s\n",
-      "[Batch 200/313] elapsed 10.17 s\n",
-      "[Batch 300/313] elapsed 10.87 s\n",
-      "[Epoch 4] train avg loss 0.005298, test acc 0.82, test avg loss 0.488239, throughput 125.39K wps\n",
-      "[Epoch 5 Batch 100/265] elapsed 18.25 s, avg loss 0.006496, throughput 97.69K wps\n",
-      "[Epoch 5 Batch 200/265] elapsed 18.32 s, avg loss 0.005334, throughput 118.29K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 9.88 s\n",
-      "[Batch 200/313] elapsed 10.13 s\n",
-      "[Batch 300/313] elapsed 11.12 s\n",
-      "[Epoch 5] train avg loss 0.004926, test acc 0.83, test avg loss 0.451379, throughput 127.08K wps\n",
-      "[Epoch 6 Batch 100/265] elapsed 18.67 s, avg loss 0.004079, throughput 149.80K wps\n",
-      "[Epoch 6 Batch 200/265] elapsed 19.72 s, avg loss 0.005063, throughput 109.99K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 10.34 s\n",
-      "[Batch 200/313] elapsed 9.86 s\n",
-      "[Batch 300/313] elapsed 11.09 s\n",
-      "[Epoch 6] train avg loss 0.004720, test acc 0.83, test avg loss 0.391468, throughput 122.64K wps\n",
-      "[Epoch 7 Batch 100/265] elapsed 17.97 s, avg loss 0.006191, throughput 99.83K wps\n",
-      "[Epoch 7 Batch 200/265] elapsed 15.83 s, avg loss 0.004907, throughput 130.26K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 11.16 s\n",
-      "[Batch 200/313] elapsed 12.42 s\n",
-      "[Batch 300/313] elapsed 10.98 s\n",
-      "[Epoch 7] train avg loss 0.004449, test acc 0.85, test avg loss 0.420773, throughput 132.64K wps\n",
-      "[Epoch 8 Batch 100/265] elapsed 17.19 s, avg loss 0.003661, throughput 157.41K wps\n",
-      "[Epoch 8 Batch 200/265] elapsed 17.63 s, avg loss 0.004528, throughput 128.33K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 8.75 s\n",
-      "[Batch 200/313] elapsed 9.89 s\n",
-      "[Batch 300/313] elapsed 10.56 s\n",
-      "[Epoch 8] train avg loss 0.004322, test acc 0.85, test avg loss 0.383867, throughput 134.57K wps\n",
-      "[Epoch 9 Batch 100/265] elapsed 17.27 s, avg loss 0.003786, throughput 157.32K wps\n",
-      "[Epoch 9 Batch 200/265] elapsed 18.65 s, avg loss 0.005616, throughput 94.20K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 10.11 s\n",
-      "[Batch 200/313] elapsed 11.86 s\n",
-      "[Batch 300/313] elapsed 10.07 s\n",
-      "[Epoch 9] train avg loss 0.004162, test acc 0.84, test avg loss 0.417968, throughput 126.72K wps\n",
-      "[Epoch 10 Batch 100/265] elapsed 19.59 s, avg loss 0.004116, throughput 113.78K wps\n",
-      "[Epoch 10 Batch 200/265] elapsed 18.78 s, avg loss 0.005692, throughput 93.60K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 11.35 s\n",
-      "[Batch 200/313] elapsed 10.97 s\n",
-      "[Batch 300/313] elapsed 11.89 s\n",
-      "[Epoch 10] train avg loss 0.004009, test acc 0.86, test avg loss 0.432112, throughput 121.24K wps\n",
-      "[Epoch 11 Batch 100/265] elapsed 16.40 s, avg loss 0.005836, throughput 101.86K wps\n",
-      "[Epoch 11 Batch 200/265] elapsed 16.61 s, avg loss 0.003519, throughput 155.18K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 9.46 s\n",
-      "[Batch 200/313] elapsed 10.66 s\n",
-      "[Batch 300/313] elapsed 10.56 s\n",
-      "[Epoch 11] train avg loss 0.003825, test acc 0.84, test avg loss 0.462627, throughput 131.07K wps\n",
-      "[Epoch 12 Batch 100/265] elapsed 18.23 s, avg loss 0.003433, throughput 148.15K wps\n",
-      "[Epoch 12 Batch 200/265] elapsed 17.92 s, avg loss 0.004385, throughput 107.03K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 11.30 s\n",
-      "[Batch 200/313] elapsed 10.55 s\n",
-      "[Batch 300/313] elapsed 10.46 s\n",
-      "[Epoch 12] train avg loss 0.003728, test acc 0.85, test avg loss 0.411282, throughput 128.18K wps\n",
-      "[Epoch 13 Batch 100/265] elapsed 18.04 s, avg loss 0.005127, throughput 95.05K wps\n",
-      "[Epoch 13 Batch 200/265] elapsed 16.83 s, avg loss 0.002995, throughput 166.97K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 11.10 s\n",
-      "[Batch 200/313] elapsed 12.27 s\n",
-      "[Batch 300/313] elapsed 11.20 s\n",
-      "[Epoch 13] train avg loss 0.003574, test acc 0.85, test avg loss 0.382595, throughput 126.08K wps\n",
-      "[Epoch 14 Batch 100/265] elapsed 18.69 s, avg loss 0.004186, throughput 105.73K wps\n",
-      "[Epoch 14 Batch 200/265] elapsed 18.42 s, avg loss 0.002750, throughput 156.47K wps\n",
-      "Begin Testing...\n",
-      "[Batch 100/313] elapsed 10.92 s\n",
-      "[Batch 200/313] elapsed 11.73 s\n",
-      "[Batch 300/313] elapsed 11.69 s\n",
-      "[Epoch 14] train avg loss 0.003494, test acc 0.87, test avg loss 0.393573, throughput 127.62K wps\n"
+      "[Batch 100/1563] elapsed 5.60 s\n",
+      "[Batch 200/1563] elapsed 5.89 s\n",
+      "[Batch 300/1563] elapsed 6.23 s\n",
+      "[Batch 400/1563] elapsed 5.77 s\n",
+      "[Batch 500/1563] elapsed 6.02 s\n",
+      "[Batch 600/1563] elapsed 5.81 s\n",
+      "[Batch 700/1563] elapsed 6.28 s\n",
+      "[Batch 800/1563] elapsed 8.65 s\n",
+      "[Batch 900/1563] elapsed 11.79 s\n",
+      "[Batch 1000/1563] elapsed 5.64 s\n",
+      "[Batch 1100/1563] elapsed 5.47 s\n",
+      "[Batch 1200/1563] elapsed 5.91 s\n",
+      "[Batch 1300/1563] elapsed 5.57 s\n",
+      "[Batch 1400/1563] elapsed 5.83 s\n",
+      "[Batch 1500/1563] elapsed 6.24 s\n",
+      "[Epoch 0] train avg loss 0.002140, test acc 0.77, test avg loss 0.445162, throughput 56.95K wps\n"
      ]
     }
    ],
@@ -508,7 +431,7 @@
      "data": {
       "text/plain": [
        "\n",
-       "[[0.9164194]]\n",
+       "[[0.7000658]]\n",
        "<NDArray 1x1 @gpu(0)>"
       ]
      },
