--- a/docs/examples/word_embedding.ipynb
+++ b/docs/examples/word_embedding.ipynb
@@ -118,7 +118,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/gluon-nlp-toolkit/gluonnlp/embedding.py:269: UserWarning: line 0 in /home/ubuntu/.mxnet/embedding/fasttext/wiki.simple.vec: skipped likely header line.\n",
+      "/home/ubuntu/gluon-nlp/gluonnlp/embedding.py:269: UserWarning: line 0 in /home/ubuntu/.mxnet/embedding/fasttext/wiki.simple.vec: skipped likely header line.\n",
       "  .format(line_num, pretrained_file_path))\n"
      ]
     }
@@ -168,7 +168,11 @@
     {
      "data": {
       "text/plain": [
-       "['wiki.tw.vec', 'wiki.mg.vec', 'wiki.new.vec', 'wiki.sg.vec', 'wiki.lmo.vec']"
+       "['wiki.ps.vec',\n",
+       " 'wiki.koi.vec',\n",
+       " 'wiki.vls.vec',\n",
+       " 'wiki.mai.vec',\n",
+       " 'wiki.zh_classical.vec']"
       ]
      },
      "execution_count": 6,
@@ -445,11 +449,11 @@
     {
      "data": {
       "text/plain": [
-       "['glove.twitter.27B.200d.txt',\n",
-       " 'glove.twitter.27B.50d.txt',\n",
-       " 'glove.6B.300d.txt',\n",
-       " 'glove.42B.300d.txt',\n",
-       " 'glove.6B.100d.txt']"
+       "['glove.6B.300d.txt',\n",
+       " 'glove.twitter.27B.25d.txt',\n",
+       " 'glove.6B.200d.txt',\n",
+       " 'glove.6B.50d.txt',\n",
+       " 'glove.twitter.27B.50d.txt']"
       ]
      },
      "execution_count": 14,
