Add namespace in examples (#25)
* Add namespace in embedding examples

* add output

* clean comment

* as nlp

--- a/docs/examples/word_embedding.ipynb
+++ b/docs/examples/word_embedding.ipynb
@@ -26,8 +26,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:24.991031Z",
-     "start_time": "2018-03-28T20:27:23.669296Z"
+     "end_time": "2018-04-18T21:21:09.645591Z",
+     "start_time": "2018-04-18T21:21:08.685817Z"
     }
    },
    "outputs": [],
@@ -40,7 +40,7 @@
     "curr_path = os.getcwd()\n",
     "sys.path.append(os.path.join(curr_path, '..', '..'))\n",
     "\n",
-    "from gluonnlp import Vocab, embedding, data"
+    "import gluonnlp as nlp"
    ]
   },
   {
@@ -61,8 +61,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:25.000472Z",
-     "start_time": "2018-03-28T20:27:24.993155Z"
+     "end_time": "2018-04-18T21:21:09.657112Z",
+     "start_time": "2018-04-18T21:21:09.648630Z"
     }
    },
    "outputs": [],
@@ -73,7 +73,7 @@
     "def simple_tokenize(source_str, token_delim=' ', seq_delim='\\n'):\n",
     "    return filter(None, re.split(token_delim + '|' + seq_delim, source_str))\n",
     "\n",
-    "counter = data.count_tokens(simple_tokenize(text))"
+    "counter = nlp.data.count_tokens(simple_tokenize(text))"
    ]
   },
   {
@@ -88,13 +88,13 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:25.007159Z",
-     "start_time": "2018-03-28T20:27:25.003175Z"
+     "end_time": "2018-04-18T21:21:09.663915Z",
+     "start_time": "2018-04-18T21:21:09.660208Z"
     }
    },
    "outputs": [],
    "source": [
-    "vocab = Vocab(counter)"
+    "vocab = nlp.Vocab(counter)"
    ]
   },
   {
@@ -109,8 +109,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.532676Z",
-     "start_time": "2018-03-28T20:27:25.011734Z"
+     "end_time": "2018-04-18T21:21:25.241160Z",
+     "start_time": "2018-04-18T21:21:09.671722Z"
     }
    },
    "outputs": [
@@ -118,13 +118,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/gluon-nlp/gluonnlp/embedding.py:269: UserWarning: line 0 in /home/ubuntu/.mxnet/embedding/fasttext/wiki.simple.vec: skipped likely header line.\n",
+      "/Users/astonz/WorkDocs/Programs/git_repo/gluon-nlp/docs/examples/../../gluonnlp/embedding.py:269: UserWarning: line 0 in /Users/astonz/.mxnet/embedding/fasttext/wiki.simple.vec: skipped likely header line.\n",
       "  .format(line_num, pretrained_file_path))\n"
      ]
     }
    ],
    "source": [
-    "fasttext_simple = embedding.create('fasttext', source='wiki.simple.vec')"
+    "fasttext_simple = nlp.embedding.create('fasttext', source='wiki.simple.vec')"
    ]
   },
   {
@@ -139,8 +139,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.545809Z",
-     "start_time": "2018-03-28T20:27:46.534919Z"
+     "end_time": "2018-04-18T21:21:25.256539Z",
+     "start_time": "2018-04-18T21:21:25.243923Z"
     }
    },
    "outputs": [],
@@ -160,19 +160,19 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.575033Z",
-     "start_time": "2018-03-28T20:27:46.549786Z"
+     "end_time": "2018-04-18T21:21:25.276678Z",
+     "start_time": "2018-04-18T21:21:25.259964Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['wiki.ps.vec',\n",
-       " 'wiki.koi.vec',\n",
-       " 'wiki.vls.vec',\n",
-       " 'wiki.mai.vec',\n",
-       " 'wiki.zh_classical.vec']"
+       "['crawl-300d-2M.vec',\n",
+       " 'wiki.aa.vec',\n",
+       " 'wiki.ab.vec',\n",
+       " 'wiki.ace.vec',\n",
+       " 'wiki.ady.vec']"
       ]
      },
      "execution_count": 6,
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "embedding.list_sources('fasttext')[:5]"
+    "nlp.embedding.list_sources('fasttext')[:5]"
    ]
   },
   {
@@ -196,8 +196,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.586375Z",
-     "start_time": "2018-03-28T20:27:46.578874Z"
+     "end_time": "2018-04-18T21:21:25.288208Z",
+     "start_time": "2018-04-18T21:21:25.281747Z"
     }
    },
    "outputs": [
@@ -228,8 +228,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.601992Z",
-     "start_time": "2018-03-28T20:27:46.590051Z"
+     "end_time": "2018-04-18T21:21:25.301703Z",
+     "start_time": "2018-04-18T21:21:25.292101Z"
     }
    },
    "outputs": [
@@ -260,8 +260,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.618030Z",
-     "start_time": "2018-03-28T20:27:46.607093Z"
+     "end_time": "2018-04-18T21:21:25.322438Z",
+     "start_time": "2018-04-18T21:21:25.305502Z"
     }
    },
    "outputs": [
@@ -269,7 +269,7 @@
      "data": {
       "text/plain": [
        "\n",
-       "[0. 0. 0. 0. 0.]\n",
+       "[ 0.  0.  0.  0.  0.]\n",
        "<NDArray 5 @cpu(0)>"
       ]
      },
@@ -294,8 +294,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.634854Z",
-     "start_time": "2018-03-28T20:27:46.626137Z"
+     "end_time": "2018-04-18T21:21:25.332900Z",
+     "start_time": "2018-04-18T21:21:25.326116Z"
     }
    },
    "outputs": [
@@ -331,8 +331,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.650374Z",
-     "start_time": "2018-03-28T20:27:46.640684Z"
+     "end_time": "2018-04-18T21:21:25.353386Z",
+     "start_time": "2018-04-18T21:21:25.336764Z"
     }
    },
    "outputs": [
@@ -340,8 +340,8 @@
      "data": {
       "text/plain": [
        "\n",
-       "[[ 0.39567   0.21454  -0.035389 -0.24299  -0.095645]\n",
-       " [ 0.10444  -0.10858   0.27212   0.13299  -0.33165 ]]\n",
+       "[[ 0.39567     0.21454    -0.035389   -0.24299    -0.095645  ]\n",
+       " [ 0.10444    -0.10858     0.27212     0.13299    -0.33164999]]\n",
        "<NDArray 2x5 @cpu(0)>"
       ]
      },
@@ -368,8 +368,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.665587Z",
-     "start_time": "2018-03-28T20:27:46.653446Z"
+     "end_time": "2018-04-18T21:21:25.366711Z",
+     "start_time": "2018-04-18T21:21:25.357758Z"
     }
    },
    "outputs": [
@@ -400,8 +400,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.689389Z",
-     "start_time": "2018-03-28T20:27:46.673079Z"
+     "end_time": "2018-04-18T21:21:25.387399Z",
+     "start_time": "2018-04-18T21:21:25.370385Z"
     }
    },
    "outputs": [
@@ -409,8 +409,8 @@
      "data": {
       "text/plain": [
        "\n",
-       "[[ 0.39567   0.21454  -0.035389 -0.24299  -0.095645]\n",
-       " [ 0.10444  -0.10858   0.27212   0.13299  -0.33165 ]]\n",
+       "[[ 0.39567     0.21454    -0.035389   -0.24299    -0.095645  ]\n",
+       " [ 0.10444    -0.10858     0.27212     0.13299    -0.33164999]]\n",
        "<NDArray 2x5 @cpu(0)>"
       ]
      },
@@ -441,19 +441,19 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:46.705774Z",
-     "start_time": "2018-03-28T20:27:46.692576Z"
+     "end_time": "2018-04-18T21:21:25.398404Z",
+     "start_time": "2018-04-18T21:21:25.391019Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['glove.6B.300d.txt',\n",
-       " 'glove.twitter.27B.25d.txt',\n",
-       " 'glove.6B.200d.txt',\n",
+       "['glove.42B.300d.txt',\n",
        " 'glove.6B.50d.txt',\n",
-       " 'glove.twitter.27B.50d.txt']"
+       " 'glove.6B.100d.txt',\n",
+       " 'glove.6B.200d.txt',\n",
+       " 'glove.6B.300d.txt']"
       ]
      },
      "execution_count": 14,
@@ -462,7 +462,7 @@
     }
    ],
    "source": [
-    "embedding.list_sources('glove')[:5]"
+    "nlp.embedding.list_sources('glove')[:5]"
    ]
   },
   {
@@ -477,13 +477,13 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:27:58.913269Z",
-     "start_time": "2018-03-28T20:27:46.709907Z"
+     "end_time": "2018-04-18T21:21:34.643018Z",
+     "start_time": "2018-04-18T21:21:25.401688Z"
     }
    },
    "outputs": [],
    "source": [
-    "glove_6b50d = embedding.create('glove', source='glove.6B.50d.txt')"
+    "glove_6b50d = nlp.embedding.create('glove', source='glove.6B.50d.txt')"
    ]
   },
   {
@@ -498,13 +498,13 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:00.598934Z",
-     "start_time": "2018-03-28T20:27:58.915270Z"
+     "end_time": "2018-04-18T21:21:36.260011Z",
+     "start_time": "2018-04-18T21:21:34.645241Z"
     }
    },
    "outputs": [],
    "source": [
-    "vocab = Vocab(data.Counter(glove_6b50d.idx_to_token))\n",
+    "vocab = nlp.Vocab(nlp.data.Counter(glove_6b50d.idx_to_token))\n",
     "vocab.set_embedding(glove_6b50d)"
    ]
   },
@@ -520,8 +520,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:00.611236Z",
-     "start_time": "2018-03-28T20:28:00.602065Z"
+     "end_time": "2018-04-18T21:21:36.271422Z",
+     "start_time": "2018-04-18T21:21:36.262296Z"
     }
    },
    "outputs": [
@@ -552,8 +552,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:00.625533Z",
-     "start_time": "2018-03-28T20:28:00.615086Z"
+     "end_time": "2018-04-18T21:21:36.284213Z",
+     "start_time": "2018-04-18T21:21:36.274357Z"
     }
    },
    "outputs": [
@@ -585,8 +585,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:00.641807Z",
-     "start_time": "2018-03-28T20:28:00.633953Z"
+     "end_time": "2018-04-18T21:21:36.294522Z",
+     "start_time": "2018-04-18T21:21:36.287648Z"
     }
    },
    "outputs": [],
@@ -608,8 +608,8 @@
    "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:00.818723Z",
-     "start_time": "2018-03-28T20:28:00.645349Z"
+     "end_time": "2018-04-18T21:21:36.491292Z",
+     "start_time": "2018-04-18T21:21:36.298082Z"
     }
    },
    "outputs": [
@@ -618,7 +618,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[1.]\n",
+      "[ 1.]\n",
       "<NDArray 1 @cpu(0)>\n",
       "\n",
       "[-1.]\n",
@@ -649,8 +649,8 @@
    "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:00.839835Z",
-     "start_time": "2018-03-28T20:28:00.821661Z"
+     "end_time": "2018-04-18T21:21:36.511216Z",
+     "start_time": "2018-04-18T21:21:36.494616Z"
     }
    },
    "outputs": [],
@@ -680,8 +680,8 @@
    "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:01.255571Z",
-     "start_time": "2018-03-28T20:28:00.844100Z"
+     "end_time": "2018-04-18T21:21:36.936382Z",
+     "start_time": "2018-04-18T21:21:36.515950Z"
     }
    },
    "outputs": [
@@ -712,8 +712,8 @@
    "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:01.270217Z",
-     "start_time": "2018-03-28T20:28:01.260156Z"
+     "end_time": "2018-04-18T21:21:36.947652Z",
+     "start_time": "2018-04-18T21:21:36.938972Z"
     }
    },
    "outputs": [
@@ -721,7 +721,7 @@
      "data": {
       "text/plain": [
        "\n",
-       "[0.838713]\n",
+       "[ 0.83871305]\n",
        "<NDArray 1 @cpu(0)>"
       ]
      },
@@ -746,8 +746,8 @@
    "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:01.680257Z",
-     "start_time": "2018-03-28T20:28:01.273734Z"
+     "end_time": "2018-04-18T21:21:37.387588Z",
+     "start_time": "2018-04-18T21:21:36.951272Z"
     }
    },
    "outputs": [
@@ -778,8 +778,8 @@
    "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:02.234073Z",
-     "start_time": "2018-03-28T20:28:01.682694Z"
+     "end_time": "2018-04-18T21:21:37.803074Z",
+     "start_time": "2018-04-18T21:21:37.390750Z"
     }
    },
    "outputs": [
@@ -810,8 +810,8 @@
    "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:02.643166Z",
-     "start_time": "2018-03-28T20:28:02.239920Z"
+     "end_time": "2018-04-18T21:21:38.228669Z",
+     "start_time": "2018-04-18T21:21:37.805389Z"
     }
    },
    "outputs": [
@@ -846,8 +846,8 @@
    "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:02.672130Z",
-     "start_time": "2018-03-28T20:28:02.645643Z"
+     "end_time": "2018-04-18T21:21:38.257604Z",
+     "start_time": "2018-04-18T21:21:38.233278Z"
     }
    },
    "outputs": [],
@@ -879,8 +879,8 @@
    "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:03.107053Z",
-     "start_time": "2018-03-28T20:28:02.675319Z"
+     "end_time": "2018-04-18T21:21:38.680899Z",
+     "start_time": "2018-04-18T21:21:38.261914Z"
     }
    },
    "outputs": [
@@ -911,8 +911,8 @@
    "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:03.122352Z",
-     "start_time": "2018-03-28T20:28:03.109744Z"
+     "end_time": "2018-04-18T21:21:38.695428Z",
+     "start_time": "2018-04-18T21:21:38.683602Z"
     }
    },
    "outputs": [
@@ -920,7 +920,7 @@
      "data": {
       "text/plain": [
        "\n",
-       "[0.9658343]\n",
+       "[ 0.96583396]\n",
        "<NDArray 1 @cpu(0)>"
       ]
      },
@@ -950,8 +950,8 @@
    "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:03.532147Z",
-     "start_time": "2018-03-28T20:28:03.124338Z"
+     "end_time": "2018-04-18T21:21:39.088642Z",
+     "start_time": "2018-04-18T21:21:38.700677Z"
     },
     "scrolled": true
    },
@@ -983,8 +983,8 @@
    "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:03.911556Z",
-     "start_time": "2018-03-28T20:28:03.535626Z"
+     "end_time": "2018-04-18T21:21:39.475502Z",
+     "start_time": "2018-04-18T21:21:39.090897Z"
     }
    },
    "outputs": [
@@ -1015,8 +1015,8 @@
    "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-03-28T20:28:04.297294Z",
-     "start_time": "2018-03-28T20:28:03.914046Z"
+     "end_time": "2018-04-18T21:21:39.853157Z",
+     "start_time": "2018-04-18T21:21:39.478332Z"
     }
    },
    "outputs": [
@@ -1052,7 +1052,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
